tests/cases/scc/error/0021-void.c.res
./tests/cases/scc/error/0021-void.c:8:9:	error:   could not convert type void to type int.
exit code 1
